changed a lot lot lot

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".Show"> </activity>
+        <activity android:name=".SplashScreen" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN">
+                <category android:name="android.intent.category.LAUNCHER">
+            </category></action></intent-filter>
+        </activity>
     </application>
 
 </manifest>
