--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="7"
         android:targetSdkVersion="11" />
 
     <uses-permission android:name = "android.permission.INTERNET"/>
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/CustomActionBarTheme" >
         <activity android:name=".SplashScreen" 
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:label="@string/app_name"
@@ -26,7 +26,8 @@
         </activity>
         <activity
             android:name="com.johko.jugendnetz_berlin.destellenangebote.RSSMain"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            >
         </activity>
         <activity android:name=".Show"> </activity>
     </application>
